# MMMAudio

./: .gitignore  README.md  mkdocs.yml  pixi.toml  pyproject.toml
examples/: BuchlaWaveFolder.mojo  BuchlaWaveFolder.py  BuchlaWaveFolder_AD.mojo  DefaultGraph.mojo  DistanceBasedPanning.mojo  DistanceBasedPanning.py  FM4.mojo  FeedbackDelays.mojo  Grains.mojo  Grains.py  Grains_Custom.mojo  MPlotExample.py  ManyOscillators.mojo  MelBandsExample.mojo  MidiSequencer.mojo  MidiSequencer.py  NessStretch.py  PAF_example.mojo  PAF_example.py  ParallelGraphs.mojo  PitchShiftExample.mojo  TorchMlp.py  VectorBasedPanning.mojo  VectorBasedPanning.py  WavetableOsc.mojo  WavetableOscSIMD.mojo  WavetableOscSIMD.py
examples/tests/: TestEnv.mojo  TestEnv.py  TestLatch.mojo  TestOsc.mojo  (+7 more)
mmm_audio/: Analysis.mojo  BooleanTests.mojo  Buffer_Module.mojo  BufferedProcess_Module.mojo  Delays.mojo  Distortion.mojo  Envelopes.mojo  FFTProcess_Module.mojo  FFT_Functions.mojo  FFT_Processes.mojo  Filters.mojo  Grains.mojo  MBufAnalysisBridge.mojo  MLP_Python.py  MMMAudioBridge.mojo  MMMWorld_Module.mojo  Noise.mojo  Oscillators.mojo  Oversampling_Module.mojo  Pan.mojo  Patterns.mojo  Player.mojo  Polyphony.mojo  ReverbsDelayFX.mojo  Synthesizers.mojo  Windows_Module.mojo  XBAP.mojo  __init__.mojo  constants.mojo  functions.mojo  sound_file.mojo
mmm_python/: MMMAudio.py  Patterns.py
testing_mmm_audio/: UnitTests.mojo  check_docstrings.py
workshop_templates/: FFTTemplate.mojo  FFTTemplate.py  PM_Distortion.mojo  PM_Distortion.py  SubtractiveTemplate.mojo  SubtractiveTemplate.py
(+1 files in other folders)
