[project]
name = "MMMAudio"
version = "0.1.0"
requires-python = ">=3.14"
authors = [
  { name = "Sam Pluta", email = "spluta@gmail.com" },
  { name = "Ted Moore", email = "ted@tedmooremusic.com" }
]
dependencies = [
  "hidapi>=0.15.0,<0.16",
  "ipykernel>=7.1.0,<8",
  "jupyterlab>=4.5.5,<5",
  "librosa>=0.11.0,<0.12",
  "matplotlib>=3.10.8,<4",
  "mkdocs>=1.6.1,<2",
  "mkdocs-material>=9.7.1,<10",
  "mkdocs-pdf>=0.1.2,<0.2",
  "mkdocs-simple-hooks>=0.1.5,<0.2",
  "mkdocs-with-pdf>=0.9.3,<0.10",
  "mkdocstrings>=1.0.3,<2",
  "mkdocstrings-python>=2.0.2,<3",
  "numpy>=2.3.5,<3",
  "pyaudio>=0.2.14,<0.3",
  "pyautogui>=0.9.54,<0.10",
  "pygments>=2.19.2,<3",
  "pymdown-extensions>=10.21.1,<11",
  "pyside6>=6.10.2,<7",
  "python-osc>=1.9.3,<2",
  "scipy>=1.17.0,<2",
  "setuptools<82",
  "supriya-midi>=26.5b0,<27",
  "torch>=2.10.0,<3",
  "umap-learn>=0.5.11,<0.6",
]

[tool.uv]
extra-index-url = ["https://repo.prefix.dev/modular-community/simple"]
